feat: Production deployment - recurring expenses, customer analytics, return cost fixes, documentation updates
- Add recurring expense system (V94-V96 migrations)
- Refactor expense categories to store-specific (V97)
- Add CPC/CVR/currency/OTV tracking fields (V98)
- Add performance indexes (V99)
- Fix return cost calculation (remove commission, use cargo invoices)
- Update documentation (architecture, deployment, API inventory)
- Remove stock tracking system
- Update CLAUDE.md with deployment instructions

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>