@@ -2,6 +2,8 @@ package com.ecommerce.sellerx.returns;
 
 import com.ecommerce.sellerx.common.BaseUnitTest;
 import com.ecommerce.sellerx.common.TestDataBuilder;
+import com.ecommerce.sellerx.financial.OrderShippingCostProjection;
+import com.ecommerce.sellerx.financial.TrendyolCargoInvoiceRepository;
 import com.ecommerce.sellerx.orders.OrderItem;
 import com.ecommerce.sellerx.orders.TrendyolOrder;
 import com.ecommerce.sellerx.orders.TrendyolOrderRepository;
@@ -39,6 +41,12 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
     @Mock
     private ReturnRecordRepository returnRecordRepository;
 
+    @Mock
+    private TrendyolCargoInvoiceRepository cargoInvoiceRepository;
+
+    @Mock
+    private TrendyolClaimRepository claimRepository;
+
     private ReturnAnalyticsService service;
 
     private User testUser;
@@ -48,7 +56,8 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
     @BeforeEach
     void setUp() {
         TestDataBuilder.resetSequence();
-        service = new ReturnAnalyticsService(orderRepository, productRepository, returnRecordRepository);
+        service = new ReturnAnalyticsService(orderRepository, productRepository,
+                returnRecordRepository, cargoInvoiceRepository, claimRepository);
 
         testUser = TestDataBuilder.user().build();
         testStore = TestDataBuilder.completedStore(testUser).build();
@@ -65,12 +74,14 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
             LocalDate startDate = LocalDate.of(2025, 1, 1);
             LocalDate endDate = LocalDate.of(2025, 1, 31);
 
-            when(orderRepository.findReturnedOrdersByStoreAndDateRange(
-                    eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
-                    .thenReturn(Collections.emptyList());
             when(orderRepository.countByStoreIdAndOrderDateBetween(
                     eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
                     .thenReturn(0L);
+            // Only mock the queries actually called when there are 0 returns
+            when(claimRepository.findByStoreIdAndDateRange(eq(storeId), any(), any()))
+                    .thenReturn(Collections.emptyList());
+            when(cargoInvoiceRepository.findReturnCargoOrderNumbers(eq(storeId), any(), any()))
+                    .thenReturn(Collections.emptyList());
 
             ReturnAnalyticsResponse response = service.getReturnAnalytics(storeId, startDate, endDate);
 
@@ -93,9 +104,8 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
 
             List<TrendyolOrder> returnedOrders = createReturnedOrders(5);
 
-            when(orderRepository.findReturnedOrdersByStoreAndDateRange(
-                    eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
-                    .thenReturn(returnedOrders);
+            mockClaimsForOrders(returnedOrders);
+            mockEmptyCargoInvoices();
             when(orderRepository.countByStoreIdAndOrderDateBetween(
                     eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
                     .thenReturn(100L);
@@ -112,23 +122,81 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
         }
 
         @Test
-        @DisplayName("should calculate cost breakdown with product cost and shipping")
-        void shouldCalculateCostBreakdown() {
+        @DisplayName("should use real cargo invoice data for shipping costs")
+        void shouldUseRealCargoInvoiceData() {
             LocalDate startDate = LocalDate.of(2025, 1, 1);
             LocalDate endDate = LocalDate.of(2025, 1, 31);
 
             OrderItem item = TestDataBuilder.orderItem()
                     .cost(new BigDecimal("100.00"))
                     .unitEstimatedCommission(new BigDecimal("15.00"))
-                    .quantity(2)
+                    .quantity(1)
                     .build();
             TrendyolOrder order = TestDataBuilder.order(testStore)
+                    .tyOrderNumber("ORDER-001")
                     .orderItems(List.of(item))
+                    .isResalable(false)
                     .build();
 
-            when(orderRepository.findReturnedOrdersByStoreAndDateRange(
+            mockClaimsForOrder(order);
+            when(orderRepository.countByStoreIdAndOrderDateBetween(
                     eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
-                    .thenReturn(List.of(order));
+                    .thenReturn(10L);
+            when(orderRepository.findRevenueOrdersByStoreAndDateRange(
+                    eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
+                    .thenReturn(Collections.emptyList());
+            when(productRepository.findByStoreId(storeId))
+                    .thenReturn(Collections.emptyList());
+
+            // Mock real cargo invoice data: 75 TL outbound, 80 TL return
+            when(cargoInvoiceRepository.sumOutboundShippingByOrderNumbers(eq(storeId), any()))
+                    .thenReturn(List.of(createShippingProjection("ORDER-001", new BigDecimal("75.00"))));
+            when(cargoInvoiceRepository.sumReturnShippingByOrderNumbers(eq(storeId), any()))
+                    .thenReturn(List.of(createShippingProjection("ORDER-001", new BigDecimal("80.00"))));
+            when(cargoInvoiceRepository.findReturnCargoOrderNumbers(eq(storeId), any(), any()))
+                    .thenReturn(Collections.emptyList());
+
+            ReturnAnalyticsResponse response = service.getReturnAnalytics(storeId, startDate, endDate);
+
+            ReturnCostBreakdown breakdown = response.getCostBreakdown();
+            assertThat(breakdown).isNotNull();
+            // Product cost: 100
+            assertThat(breakdown.getProductCost()).isEqualByComparingTo(new BigDecimal("100.00"));
+            // Commission loss: 15
+            assertThat(breakdown.getCommissionLoss()).isEqualByComparingTo(new BigDecimal("15.00"));
+            // Real outbound shipping: 75 (not hardcoded 25)
+            assertThat(breakdown.getShippingCostOut()).isEqualByComparingTo(new BigDecimal("75.00"));
+            // Real return shipping: 80 (not hardcoded 25)
+            assertThat(breakdown.getShippingCostReturn()).isEqualByComparingTo(new BigDecimal("80.00"));
+            // Packaging: 5
+            assertThat(breakdown.getPackagingCost()).isEqualByComparingTo(new BigDecimal("5"));
+            // Total: 100 + 75 + 80 + 5 = 260 (commission excluded - Trendyol refunds it)
+            assertThat(breakdown.getTotalLoss()).isEqualByComparingTo(new BigDecimal("260.00"));
+            // Real return invoice exists, so not estimated
+            assertThat(breakdown.getRealReturnShippingCount()).isEqualTo(1);
+            assertThat(breakdown.getEstimatedReturnShippingCount()).isEqualTo(0);
+        }
+
+        @Test
+        @DisplayName("should fallback to order's estimatedShippingCost when no cargo invoice exists")
+        void shouldFallbackToOrderEstimatedShippingCost() {
+            LocalDate startDate = LocalDate.of(2025, 1, 1);
+            LocalDate endDate = LocalDate.of(2025, 1, 31);
+
+            OrderItem item = TestDataBuilder.orderItem()
+                    .cost(new BigDecimal("100.00"))
+                    .unitEstimatedCommission(BigDecimal.ZERO)
+                    .quantity(1)
+                    .build();
+            TrendyolOrder order = TestDataBuilder.order(testStore)
+                    .tyOrderNumber("ORDER-002")
+                    .orderItems(List.of(item))
+                    .estimatedShippingCost(new BigDecimal("60.00"))
+                    .returnShippingCost(new BigDecimal("65.00"))
+                    .build();
+
+            mockClaimsForOrder(order);
+            mockEmptyCargoInvoices();
             when(orderRepository.countByStoreIdAndOrderDateBetween(
                     eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
                     .thenReturn(10L);
@@ -141,24 +209,66 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
             ReturnAnalyticsResponse response = service.getReturnAnalytics(storeId, startDate, endDate);
 
             ReturnCostBreakdown breakdown = response.getCostBreakdown();
-            assertThat(breakdown).isNotNull();
-            // Product cost: 100 * 2 = 200
-            assertThat(breakdown.getProductCost()).isEqualByComparingTo(new BigDecimal("200.00"));
-            // Commission loss: 15 * 2 = 30
-            assertThat(breakdown.getCommissionLoss()).isEqualByComparingTo(new BigDecimal("30.00"));
-            // Shipping out: 25 * 2 = 50
-            assertThat(breakdown.getShippingCostOut()).isEqualByComparingTo(new BigDecimal("50"));
-            // Shipping return: 25 * 2 = 50
-            assertThat(breakdown.getShippingCostReturn()).isEqualByComparingTo(new BigDecimal("50"));
-            // Packaging: 5 * 2 = 10
-            assertThat(breakdown.getPackagingCost()).isEqualByComparingTo(new BigDecimal("10"));
-            // Total: 200 + 30 + 50 + 50 + 10 = 340
-            assertThat(breakdown.getTotalLoss()).isEqualByComparingTo(new BigDecimal("340"));
+            // Should use order's estimatedShippingCost as fallback
+            assertThat(breakdown.getShippingCostOut()).isEqualByComparingTo(new BigDecimal("60.00"));
+            // Should use order's returnShippingCost as fallback
+            assertThat(breakdown.getShippingCostReturn()).isEqualByComparingTo(new BigDecimal("65.00"));
         }
 
         @Test
-        @DisplayName("should handle items with null cost gracefully")
-        void shouldHandleNullCostGracefully() {
+        @DisplayName("should estimate return shipping from outbound when no return invoice exists")
+        void shouldEstimateReturnShippingFromOutbound() {
+            LocalDate startDate = LocalDate.of(2025, 1, 1);
+            LocalDate endDate = LocalDate.of(2025, 1, 31);
+
+            OrderItem item = TestDataBuilder.orderItem()
+                    .cost(new BigDecimal("100.00"))
+                    .unitEstimatedCommission(BigDecimal.ZERO)
+                    .quantity(1)
+                    .build();
+            TrendyolOrder order = TestDataBuilder.order(testStore)
+                    .tyOrderNumber("ORDER-EST")
+                    .orderItems(List.of(item))
+                    .estimatedShippingCost(new BigDecimal("85.00"))
+                    .returnShippingCost(BigDecimal.ZERO)
+                    .isResalable(false)
+                    .build();
+
+            mockClaimsForOrder(order);
+            when(orderRepository.countByStoreIdAndOrderDateBetween(
+                    eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
+                    .thenReturn(10L);
+            when(orderRepository.findRevenueOrdersByStoreAndDateRange(
+                    eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
+                    .thenReturn(Collections.emptyList());
+            when(productRepository.findByStoreId(storeId))
+                    .thenReturn(Collections.emptyList());
+
+            // Outbound invoice exists, but NO return invoice
+            when(cargoInvoiceRepository.sumOutboundShippingByOrderNumbers(eq(storeId), any()))
+                    .thenReturn(List.of(createShippingProjection("ORDER-EST", new BigDecimal("85.00"))));
+            when(cargoInvoiceRepository.sumReturnShippingByOrderNumbers(eq(storeId), any()))
+                    .thenReturn(Collections.emptyList()); // No return invoice yet!
+            when(cargoInvoiceRepository.findReturnCargoOrderNumbers(eq(storeId), any(), any()))
+                    .thenReturn(Collections.emptyList());
+
+            ReturnAnalyticsResponse response = service.getReturnAnalytics(storeId, startDate, endDate);
+
+            ReturnCostBreakdown breakdown = response.getCostBreakdown();
+            // Outbound shipping: 85 (real from invoice)
+            assertThat(breakdown.getShippingCostOut()).isEqualByComparingTo(new BigDecimal("85.00"));
+            // Return shipping: 85 (ESTIMATED from outbound - not zero!)
+            assertThat(breakdown.getShippingCostReturn()).isEqualByComparingTo(new BigDecimal("85.00"));
+            // Estimation tracking
+            assertThat(breakdown.getEstimatedReturnShippingCount()).isEqualTo(1);
+            assertThat(breakdown.getRealReturnShippingCount()).isEqualTo(0);
+            // Total: 100 (product) + 85 (out) + 85 (return est.) + 5 (pack) = 275
+            assertThat(breakdown.getTotalLoss()).isEqualByComparingTo(new BigDecimal("275.00"));
+        }
+
+        @Test
+        @DisplayName("should return zero shipping when no outbound or return data available")
+        void shouldReturnZeroShippingWhenNoDataAtAll() {
             LocalDate startDate = LocalDate.of(2025, 1, 1);
             LocalDate endDate = LocalDate.of(2025, 1, 31);
 
@@ -168,12 +278,14 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
                     .quantity(1)
                     .build();
             TrendyolOrder order = TestDataBuilder.order(testStore)
+                    .tyOrderNumber("ORDER-ZERO")
                     .orderItems(List.of(item))
+                    .estimatedShippingCost(BigDecimal.ZERO)
+                    .returnShippingCost(BigDecimal.ZERO)
                     .build();
 
-            when(orderRepository.findReturnedOrdersByStoreAndDateRange(
-                    eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
-                    .thenReturn(List.of(order));
+            mockClaimsForOrder(order);
+            mockEmptyCargoInvoices();
             when(orderRepository.countByStoreIdAndOrderDateBetween(
                     eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
                     .thenReturn(1L);
@@ -185,10 +297,13 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
 
             ReturnAnalyticsResponse response = service.getReturnAnalytics(storeId, startDate, endDate);
 
-            // Cost breakdown should still have shipping + packaging = 25 + 25 + 5 = 55
+            // Only packaging cost remains: 5 TL
             assertThat(response.getCostBreakdown().getProductCost()).isEqualByComparingTo(BigDecimal.ZERO);
-            assertThat(response.getCostBreakdown().getCommissionLoss()).isEqualByComparingTo(BigDecimal.ZERO);
-            assertThat(response.getCostBreakdown().getTotalLoss()).isEqualByComparingTo(new BigDecimal("55"));
+            assertThat(response.getCostBreakdown().getShippingCostOut()).isEqualByComparingTo(BigDecimal.ZERO);
+            assertThat(response.getCostBreakdown().getShippingCostReturn()).isEqualByComparingTo(BigDecimal.ZERO);
+            assertThat(response.getCostBreakdown().getTotalLoss()).isEqualByComparingTo(new BigDecimal("5"));
+            assertThat(response.getCostBreakdown().getEstimatedReturnShippingCount()).isEqualTo(1);
+            assertThat(response.getCostBreakdown().getRealReturnShippingCount()).isEqualTo(0);
         }
 
         @Test
@@ -199,12 +314,11 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
 
             OrderItem item1 = TestDataBuilder.orderItem().quantity(3).cost(BigDecimal.TEN).build();
             OrderItem item2 = TestDataBuilder.orderItem().quantity(2).cost(BigDecimal.TEN).build();
-            TrendyolOrder order1 = TestDataBuilder.order(testStore).orderItems(List.of(item1)).build();
-            TrendyolOrder order2 = TestDataBuilder.order(testStore).orderItems(List.of(item2)).build();
+            TrendyolOrder order1 = TestDataBuilder.order(testStore).tyOrderNumber("ORDER-A").orderItems(List.of(item1)).build();
+            TrendyolOrder order2 = TestDataBuilder.order(testStore).tyOrderNumber("ORDER-B").orderItems(List.of(item2)).build();
 
-            when(orderRepository.findReturnedOrdersByStoreAndDateRange(
-                    eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
-                    .thenReturn(List.of(order1, order2));
+            mockClaimsForOrders(List.of(order1, order2));
+            mockEmptyCargoInvoices();
             when(orderRepository.countByStoreIdAndOrderDateBetween(
                     eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
                     .thenReturn(50L);
@@ -220,7 +334,7 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
         }
 
         @Test
-        @DisplayName("should calculate average loss per return")
+        @DisplayName("should calculate average loss per return with real shipping data")
         void shouldCalculateAvgLossPerReturn() {
             LocalDate startDate = LocalDate.of(2025, 1, 1);
             LocalDate endDate = LocalDate.of(2025, 1, 31);
@@ -233,12 +347,23 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
                     .cost(new BigDecimal("150.00"))
                     .unitEstimatedCommission(BigDecimal.ZERO)
                     .quantity(1).build();
-            TrendyolOrder order1 = TestDataBuilder.order(testStore).orderItems(List.of(item1)).build();
-            TrendyolOrder order2 = TestDataBuilder.order(testStore).orderItems(List.of(item2)).build();
+            TrendyolOrder order1 = TestDataBuilder.order(testStore)
+                    .tyOrderNumber("ORD-1")
+                    .orderItems(List.of(item1))
+                    .estimatedShippingCost(new BigDecimal("70.00"))
+                    .returnShippingCost(new BigDecimal("70.00"))
+                    .isResalable(false)
+                    .build();
+            TrendyolOrder order2 = TestDataBuilder.order(testStore)
+                    .tyOrderNumber("ORD-2")
+                    .orderItems(List.of(item2))
+                    .estimatedShippingCost(new BigDecimal("90.00"))
+                    .returnShippingCost(new BigDecimal("90.00"))
+                    .isResalable(false)
+                    .build();
 
-            when(orderRepository.findReturnedOrdersByStoreAndDateRange(
-                    eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
-                    .thenReturn(List.of(order1, order2));
+            mockClaimsForOrders(List.of(order1, order2));
+            mockEmptyCargoInvoices();
             when(orderRepository.countByStoreIdAndOrderDateBetween(
                     eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
                     .thenReturn(10L);
@@ -250,9 +375,10 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
 
             ReturnAnalyticsResponse response = service.getReturnAnalytics(storeId, startDate, endDate);
 
-            // Total loss per order: (50 + 25 + 25 + 5) = 105 and (150 + 25 + 25 + 5) = 205
-            // Total loss: 310. Average: 310 / 2 = 155
-            assertThat(response.getAvgLossPerReturn()).isEqualByComparingTo(new BigDecimal("155.00"));
+            // Order1: 50 (product) + 70 (out) + 70 (return) + 5 (pack) = 195
+            // Order2: 150 (product) + 90 (out) + 90 (return) + 5 (pack) = 335
+            // Total: 530, Average: 530 / 2 = 265
+            assertThat(response.getAvgLossPerReturn()).isEqualByComparingTo(new BigDecimal("265.00"));
         }
 
         @Test
@@ -264,15 +390,16 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
             OrderItem item1 = TestDataBuilder.orderItem().quantity(1).cost(new BigDecimal("50.00")).build();
             OrderItem item2 = TestDataBuilder.orderItem().quantity(1).cost(new BigDecimal("80.00")).build();
             TrendyolOrder order1 = TestDataBuilder.order(testStore)
+                    .tyOrderNumber("TREND-1")
                     .orderDate(LocalDateTime.of(2025, 1, 10, 12, 0))
                     .orderItems(List.of(item1)).build();
             TrendyolOrder order2 = TestDataBuilder.order(testStore)
+                    .tyOrderNumber("TREND-2")
                     .orderDate(LocalDateTime.of(2025, 1, 15, 14, 0))
                     .orderItems(List.of(item2)).build();
 
-            when(orderRepository.findReturnedOrdersByStoreAndDateRange(
-                    eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
-                    .thenReturn(List.of(order1, order2));
+            mockClaimsForOrders(List.of(order1, order2));
+            mockEmptyCargoInvoices();
             when(orderRepository.countByStoreIdAndOrderDateBetween(
                     eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
                     .thenReturn(100L);
@@ -298,9 +425,8 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
 
             List<TrendyolOrder> returnedOrders = createReturnedOrders(3);
 
-            when(orderRepository.findReturnedOrdersByStoreAndDateRange(
-                    eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
-                    .thenReturn(returnedOrders);
+            mockClaimsForOrders(returnedOrders);
+            mockEmptyCargoInvoices();
             when(orderRepository.countByStoreIdAndOrderDateBetween(
                     eq(storeId), any(LocalDateTime.class), any(LocalDateTime.class)))
                     .thenReturn(10L);
@@ -331,6 +457,56 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
 
     // Helper methods
 
+    private void mockEmptyCargoInvoices() {
+        when(cargoInvoiceRepository.sumOutboundShippingByOrderNumbers(eq(storeId), any()))
+                .thenReturn(Collections.emptyList());
+        when(cargoInvoiceRepository.sumReturnShippingByOrderNumbers(eq(storeId), any()))
+                .thenReturn(Collections.emptyList());
+        when(cargoInvoiceRepository.findReturnCargoOrderNumbers(eq(storeId), any(), any()))
+                .thenReturn(Collections.emptyList());
+    }
+
+    private void mockEmptyClaims() {
+        when(claimRepository.findByStoreIdAndDateRange(eq(storeId), any(), any()))
+                .thenReturn(Collections.emptyList());
+        when(claimRepository.findByStoreIdAndOrderNumber(eq(storeId), any()))
+                .thenReturn(Collections.emptyList());
+    }
+
+    private void mockClaimsForOrders(List<TrendyolOrder> orders) {
+        List<TrendyolClaim> claims = new ArrayList<>();
+        for (TrendyolOrder order : orders) {
+            String orderNumber = order.getTyOrderNumber();
+            if (orderNumber != null) {
+                claims.add(TrendyolClaim.builder()
+                        .orderNumber(orderNumber)
+                        .build());
+                when(orderRepository.findByStoreIdAndTyOrderNumber(eq(storeId), eq(orderNumber)))
+                        .thenReturn(List.of(order));
+            }
+        }
+        when(claimRepository.findByStoreIdAndDateRange(eq(storeId), any(), any()))
+                .thenReturn(claims);
+    }
+
+    private void mockClaimsForOrder(TrendyolOrder order) {
+        mockClaimsForOrders(List.of(order));
+    }
+
+    private OrderShippingCostProjection createShippingProjection(String orderNumber, BigDecimal amount) {
+        return new OrderShippingCostProjection() {
+            @Override
+            public String getOrderNumber() {
+                return orderNumber;
+            }
+
+            @Override
+            public BigDecimal getTotalAmount() {
+                return amount;
+            }
+        };
+    }
+
     private List<TrendyolOrder> createReturnedOrders(int count) {
         List<TrendyolOrder> orders = new ArrayList<>();
         for (int i = 0; i < count; i++) {
@@ -340,6 +516,7 @@ class ReturnAnalyticsServiceTest extends BaseUnitTest {
                     .quantity(1)
                     .build();
             TrendyolOrder order = TestDataBuilder.order(testStore)
+                    .tyOrderNumber("RETURN-ORDER-" + (i + 1))
                     .orderItems(List.of(item))
                     .status("Returned")
                     .shipmentPackageStatus("Returned")
